# dendenmushi

./: .gitignore  README.md  plan.md  pyproject.toml
ref/: 实时语音合成（Qwen-TTS-Realtime） 客户端事件.md  实时语音合成（Qwen-TTS-Realtime） 服务端事件.md  实时语音识别-千问.md  实时语音识别（Qwen-ASR-Realtime）交互流程.md
ui/: package-lock.json  package.json
ui/apps/web/: .env.example  package.json  server.mjs
ui/apps/web/public/: audio-processor.js  mic-test.html
ui/apps/web/src/app/: layout.tsx  page.tsx
ui/apps/web/src/app/api/chat/: asr.ts  llm.ts  route.ts  tts.ts
ui/apps/web/src/components/thread/: index.tsx
ui/apps/web/src/providers/: Stream.tsx
