[project]
name = "dendenmushi"
version = "0.2.0"
description = "Den Den Mushi — Realtime voice workstation with ASR, LLM, and TTS"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.135.1",
    "httpx>=0.28.1",
    "openai>=2.29.0",
    "python-dotenv>=1.2.2",
    "uvicorn>=0.42.0",
    "websocket-client>=1.9.0",
]
